--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,15 +1,33 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#000000">
-  <group android:scaleX="0.58"
-      android:scaleY="0.58"
-      android:translateX="5.04"
-      android:translateY="5.04">
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <group android:scaleX="0.77"
+      android:scaleY="0.77"
+      android:translateX="12.42"
+      android:translateY="12.42">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M6,2v6h0.01L6,8.01 10,12l-4,4 0.01,0.01L6,16.01L6,22h12v-5.99h-0.01L18,16l-4,-4 4,-3.99 -0.01,-0.01L18,8L18,2L6,2zM16,16.5L16,20L8,20v-3.5l4,-4 4,4zM12,11.5l-4,-4L8,4h8v3.5l-4,4z"/>
+        android:pathData="m68.59,29.35c-1.32,0.26 -2.2,1.57 -1.95,2.89 0.22,1.14 0.54,2.51 0.59,3.27 0.11,1.7 -0.61,4.14 -1.62,5.72 -1.92,2.99 -5.43,4.41 -8.83,7.88 -2.03,2.07 -2.77,5.26 -1.32,8.02 1.3,2.48 3.44,4.09 5.34,5.49 1.91,1.4 3.69,2.68 4.66,3.91 1.75,2.23 2.33,6.13 1.73,9.24 -0.25,1.32 0.63,2.63 1.95,2.88 1.32,0.25 2.63,-0.63 2.88,-1.95 0.82,-4.28 0.29,-9.41 -2.7,-13.21 -1.65,-2.1 -3.8,-3.51 -5.61,-4.83 -1.8,-1.33 -3.27,-2.6 -3.9,-3.81 -0.28,-0.53 -0.31,-0.84 -0.25,-1.14 0.06,-0.3 0.25,-0.67 0.72,-1.15 2.51,-2.56 6.6,-4.21 9.46,-8.67 1.57,-2.45 2.6,-5.59 2.39,-8.71 -0.1,-1.5 -0.49,-2.98 -0.67,-3.89h-0C71.21,29.97 69.91,29.09 68.59,29.35Z"
+        android:strokeWidth="0"
+        android:fillColor="#ccff00"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m35.93,78.7c-1.46,0 -2.65,1.19 -2.65,2.65 0,1.46 1.19,2.65 2.65,2.65h36.14c1.46,0 2.65,-1.19 2.65,-2.65 0,-1.46 -1.19,-2.65 -2.65,-2.65z"
+        android:strokeWidth="0"
+        android:fillColor="#ccff00"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="m39.27,29.35c-1.32,-0.26 -2.63,0.62 -2.89,1.94 -0.18,0.9 -0.57,2.39 -0.67,3.89 -0.21,3.12 0.82,6.26 2.39,8.71 2.86,4.46 6.95,6.11 9.46,8.67 0.47,0.48 0.67,0.85 0.72,1.15 0.06,0.3 0.03,0.61 -0.25,1.14 -0.63,1.2 -2.09,2.48 -3.9,3.81 -1.81,1.33 -3.96,2.74 -5.61,4.83 -2.99,3.8 -3.52,8.93 -2.7,13.21 0.25,1.32 1.56,2.21 2.88,1.95 1.32,-0.25 2.21,-1.56 1.95,-2.88 -0.6,-3.11 -0.02,-7.01 1.73,-9.24 0.97,-1.23 2.75,-2.51 4.66,-3.91 1.91,-1.4 4.04,-3.01 5.34,-5.49 1.45,-2.76 0.71,-5.95 -1.32,-8.02 -3.4,-3.47 -6.91,-4.89 -8.83,-7.88 -1.01,-1.58 -1.74,-4.02 -1.62,-5.72 0.05,-0.76 0.37,-2.13 0.59,-3.27 0.26,-1.32 -0.62,-2.63 -1.95,-2.89z"
+        android:strokeWidth="0"
+        android:fillColor="#ccff00"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m35.93,24c-1.46,0 -2.65,1.19 -2.65,2.65 0,1.46 1.19,2.65 2.65,2.65h36.14c1.46,0 2.65,-1.19 2.65,-2.65C74.72,25.19 73.53,24 72.07,24Z"
+        android:strokeWidth="0"
+        android:fillColor="#ccff00"
+        android:strokeColor="#00000000"/>
   </group>
 </vector>
