--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,33 +1,40 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-  <group android:scaleX="0.77"
-      android:scaleY="0.77"
-      android:translateX="12.42"
-      android:translateY="12.42">
+    android:viewportWidth="10.612"
+    android:viewportHeight="15.365">
+  <group android:scaleX="0.29544926"
+      android:scaleY="0.42777777"
+      android:translateX="3.7383463"
+      android:translateY="4.396097">
     <path
-        android:pathData="m68.59,29.35c-1.32,0.26 -2.2,1.57 -1.95,2.89 0.22,1.14 0.54,2.51 0.59,3.27 0.11,1.7 -0.61,4.14 -1.62,5.72 -1.92,2.99 -5.43,4.41 -8.83,7.88 -2.03,2.07 -2.77,5.26 -1.32,8.02 1.3,2.48 3.44,4.09 5.34,5.49 1.91,1.4 3.69,2.68 4.66,3.91 1.75,2.23 2.33,6.13 1.73,9.24 -0.25,1.32 0.63,2.63 1.95,2.88 1.32,0.25 2.63,-0.63 2.88,-1.95 0.82,-4.28 0.29,-9.41 -2.7,-13.21 -1.65,-2.1 -3.8,-3.51 -5.61,-4.83 -1.8,-1.33 -3.27,-2.6 -3.9,-3.81 -0.28,-0.53 -0.31,-0.84 -0.25,-1.14 0.06,-0.3 0.25,-0.67 0.72,-1.15 2.51,-2.56 6.6,-4.21 9.46,-8.67 1.57,-2.45 2.6,-5.59 2.39,-8.71 -0.1,-1.5 -0.49,-2.98 -0.67,-3.89h-0C71.21,29.97 69.91,29.09 68.59,29.35Z"
+        android:pathData="m9.041,1.369c-0.338,0.066 -0.564,0.401 -0.498,0.74 0.057,0.292 0.138,0.643 0.151,0.838 0.029,0.435 -0.155,1.06 -0.415,1.465 -0.491,0.766 -1.39,1.13 -2.261,2.019 -0.52,0.531 -0.709,1.347 -0.338,2.054 0.333,0.635 0.88,1.046 1.368,1.405 0.488,0.359 0.945,0.687 1.193,1.002 0.449,0.571 0.597,1.57 0.444,2.366 -0.065,0.339 0.162,0.673 0.5,0.738 0.339,0.065 0.673,-0.162 0.738,-0.5 0.211,-1.097 0.075,-2.409 -0.691,-3.383 -0.423,-0.537 -0.974,-0.898 -1.436,-1.238 -0.462,-0.34 -0.837,-0.667 -0.998,-0.975 -0.071,-0.135 -0.079,-0.214 -0.063,-0.291 0.015,-0.077 0.065,-0.172 0.186,-0.295 0.642,-0.655 1.689,-1.077 2.422,-2.22 0.402,-0.628 0.665,-1.432 0.611,-2.231 -0.026,-0.384 -0.126,-0.764 -0.172,-0.995l-0.001,0c-0.066,-0.338 -0.401,-0.564 -0.739,-0.498z"
         android:strokeWidth="0"
         android:fillColor="#ccff00"
         android:strokeColor="#00000000"
         android:strokeLineCap="round"/>
     <path
-        android:pathData="m35.93,78.7c-1.46,0 -2.65,1.19 -2.65,2.65 0,1.46 1.19,2.65 2.65,2.65h36.14c1.46,0 2.65,-1.19 2.65,-2.65 0,-1.46 -1.19,-2.65 -2.65,-2.65z"
+        android:pathData="m0.679,14.007c-0.374,0 -0.679,0.304 -0.679,0.679 0,0.374 0.305,0.679 0.679,0.679l9.254,0c0.374,0 0.679,-0.305 0.679,-0.679 0,-0.374 -0.305,-0.679 -0.679,-0.679z"
         android:strokeWidth="0"
         android:fillColor="#ccff00"
         android:strokeColor="#00000000"/>
     <path
-        android:pathData="m39.27,29.35c-1.32,-0.26 -2.63,0.62 -2.89,1.94 -0.18,0.9 -0.57,2.39 -0.67,3.89 -0.21,3.12 0.82,6.26 2.39,8.71 2.86,4.46 6.95,6.11 9.46,8.67 0.47,0.48 0.67,0.85 0.72,1.15 0.06,0.3 0.03,0.61 -0.25,1.14 -0.63,1.2 -2.09,2.48 -3.9,3.81 -1.81,1.33 -3.96,2.74 -5.61,4.83 -2.99,3.8 -3.52,8.93 -2.7,13.21 0.25,1.32 1.56,2.21 2.88,1.95 1.32,-0.25 2.21,-1.56 1.95,-2.88 -0.6,-3.11 -0.02,-7.01 1.73,-9.24 0.97,-1.23 2.75,-2.51 4.66,-3.91 1.91,-1.4 4.04,-3.01 5.34,-5.49 1.45,-2.76 0.71,-5.95 -1.32,-8.02 -3.4,-3.47 -6.91,-4.89 -8.83,-7.88 -1.01,-1.58 -1.74,-4.02 -1.62,-5.72 0.05,-0.76 0.37,-2.13 0.59,-3.27 0.26,-1.32 -0.62,-2.63 -1.95,-2.89z"
+        android:pathData="m1.535,1.369c-0.338,-0.066 -0.673,0.16 -0.739,0.498 -0.045,0.232 -0.146,0.611 -0.172,0.995 -0.054,0.798 0.209,1.603 0.612,2.231 0.733,1.143 1.78,1.565 2.422,2.22 0.12,0.123 0.17,0.218 0.186,0.295 0.015,0.077 0.007,0.157 -0.064,0.291 -0.162,0.308 -0.536,0.635 -0.998,0.975 -0.463,0.34 -1.014,0.701 -1.437,1.238 -0.766,0.974 -0.902,2.286 -0.691,3.383 0.065,0.339 0.4,0.565 0.738,0.5 0.338,-0.065 0.565,-0.399 0.5,-0.738 -0.153,-0.796 -0.006,-1.795 0.444,-2.366 0.248,-0.315 0.705,-0.643 1.193,-1.002 0.488,-0.359 1.034,-0.77 1.367,-1.405 0.371,-0.707 0.182,-1.523 -0.338,-2.054 -0.871,-0.888 -1.77,-1.253 -2.261,-2.019 -0.26,-0.405 -0.444,-1.03 -0.415,-1.465 0.013,-0.195 0.094,-0.545 0.152,-0.838 0.066,-0.338 -0.16,-0.674 -0.498,-0.74z"
         android:strokeWidth="0"
         android:fillColor="#ccff00"
         android:strokeColor="#00000000"
         android:strokeLineCap="round"/>
     <path
-        android:pathData="m35.93,24c-1.46,0 -2.65,1.19 -2.65,2.65 0,1.46 1.19,2.65 2.65,2.65h36.14c1.46,0 2.65,-1.19 2.65,-2.65C74.72,25.19 73.53,24 72.07,24Z"
+        android:pathData="m0.679,-0c-0.374,0 -0.679,0.305 -0.679,0.679 0,0.374 0.305,0.679 0.679,0.679l9.254,0c0.374,0 0.679,-0.304 0.679,-0.679 0,-0.374 -0.305,-0.679 -0.679,-0.679z"
         android:strokeWidth="0"
         android:fillColor="#ccff00"
         android:strokeColor="#00000000"/>
+    <path
+        android:pathData="m8.361,11.789c0.244,0.619 0.144,1.473 -0.049,1.82h-6.048c-0.201,-0.373 -0.244,-1.375 -0.049,-1.82 1.644,-0.471 2.022,-1.082 2.919,-1.374 0.088,-0.168 0.042,-2.936 0.055,-3.11 0.031,-0.405 -0.129,-0.805 -0.421,-1.103 -0.778,-0.794 -1.65,-1.139 -2.17,-1.95 -0.279,-0.435 -0.468,-1.054 -0.435,-1.55 2.121,1.492 4.204,1.492 6.25,0 0.033,0.496 -0.156,1.116 -0.435,1.55 -0.52,0.811 -1.392,1.156 -2.17,1.95 -0.293,0.299 -0.452,0.699 -0.421,1.103 0.013,0.174 -0.033,2.942 0.055,3.11 0.001,0.022 0.861,0.301 1.308,0.616 0.947,0.667 1.611,0.758 1.611,0.758z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0.183197"
+        android:fillColor="#ccff00"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
   </group>
 </vector>
